--- a/NYT-api.html
+++ b/NYT-api.html
@@ -11,7 +11,28 @@
 </head>
 
 <body>
-
+  
+    <form>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Search Term:</label>
+          <input type="search" class="form-control" id="exampleFormControlInput1">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Number of Records to Retrieve:</label>
+          <select class="form-control" id="exampleFormControlSelect1">
+            <option>1</option>
+            <option>5</option>
+            <option>10</option>
+            </select>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Start Year (Optional):</label>
+                <input type="start-year" class="form-control" id="exampleFormControlInput1">
+              </div>
+              <div class="form-group">
+                  <label for="exampleFormControlInput1">End Year (Optional):</label>
+                  <input type="end-year" class="form-control" id="exampleFormControlInput1">
+                </div>
+        </div>
 
 
 
