--- a/NYT-api.html
+++ b/NYT-api.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="jumbotron">
+        <h1 class="display-4">New York Times Search</h1>
+        <hr class="my-4">
   
     <form>
         <div class="form-group">
