--- a/NYT-api.html
+++ b/NYT-api.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">New York Times Search</a>
+        </nav>
+      </div>
 
 
 
