added top articles form

--- a/NYT-api.html
+++ b/NYT-api.html
@@ -36,7 +36,13 @@
                   <input type="end-year" class="form-control" id="exampleFormControlInput1">
                 </div>
         </div>
-
+        <button type="button" class="btn btn-search">Search</button>
+<button type="button" class="btn btn-clear">Clear Results</button>
+<div class="form-group">
+    <label for="topArticles">Top Articles</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+</form>
 
 
 
